DR-1669 fix large feature blocks text align issue on mobile

--- a/src/main/webapp/src/scss/main/components/feature-block.scss
+++ b/src/main/webapp/src/scss/main/components/feature-block.scss
@@ -57,6 +57,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   flex-direction: column;
   padding-bottom:30px;
   @media (min-width: 768px) {
